Wrote air quality reporter

--- a/clients/setup.cfg
+++ b/clients/setup.cfg
@@ -5,6 +5,7 @@ name = smart_home_clients
 packages =
     generic_clients
     led_strip_manager
+    air_quality_reporter
 package_dir =
     =src
 python_requires = >=3.7
