Added a whole bunch of grid stuff

--- a/clients/setup.cfg
+++ b/clients/setup.cfg
@@ -3,9 +3,11 @@ name = smart_home_clients
 
 [options]
 packages =
-    generic_clients
-    led_strip_manager
     air_quality_reporter
+    generic_clients
+    led_grid_chess_player
+    led_grid_manager
+    led_strip_manager
 package_dir =
     =src
 python_requires = >=3.7
