--- a/clients/setup.cfg
+++ b/clients/setup.cfg
@@ -4,7 +4,7 @@ name = smart_home_clients
 [options]
 packages =
     air_quality_reporter
-    generic_clients
+    smart_home_clients
     led_grid_chess_player
     led_grid_manager
     led_strip_manager
