Refactored a whole bunch of stuff, made chess LEDs actually work

--- a/services/led-chess-player.service
+++ b/services/led-chess-player.service
@@ -2,7 +2,7 @@
 Description=A manager for the led grid
 
 [Service]
-ExecStart=/home/pi/.venvs/sh/bin/python -m led_grid
+ExecStart=/home/pi/.venvs/sh/bin/python -m led_chess_player
 
 [Install]
 WantedBy=multi-user.target
