--- a/services/led-strip-manager.service
+++ b/services/led-strip-manager.service
@@ -2,7 +2,7 @@
 Description=A manager for the led strip
 
 [Service]
-ExecStart=/home/pi/.venvs/sh/bin/python -m led_strip_manager
+ExecStart=/home/pi/.venvs/sh/bin/python -m led_strip
 
 [Install]
 WantedBy=multi-user.target
